--- a/src/templates/partials/actor-inventory.html
+++ b/src/templates/partials/actor-inventory.html
@@ -15,13 +15,16 @@
 
 <ol class="items-list inventory-list">
     {{#each sections as |section|}}
-        <li class="items-header flexrow">
+        <li class="items-header flexrow" data-slotted-inventory-section="{{@key}}">
             <h3 class="item-name flexrow">{{localize section.label}}</h3>
         </li>
 
         <ol class="item-list">
-            {{#each section.slots as |slot|}} {{#with slot.item as |item|}} {{#if item}}
-                <li class="item flexrow" data-item-id="{{item._id}}">
+            {{#each section.slots as |slot i|}} {{#with slot.item as |item|}} {{#if item}}
+                <li class="item flexrow" data-item-id="{{item._id}}"
+                    data-slotted-inventory-section="{{@../key}}"
+                    data-slotted-inventory-slot="{{i}}"
+                >
                     <div class="item-name flexrow rollable">
                         <div class="item-image" style="background-image: url('{{item.img}}')"></div>
                         <h4>
@@ -49,7 +52,10 @@
 <!--                    {{/if}}-->
                 </li>
             {{/if}} {{else}}
-                <li class="item flexrow">
+                <li class="item flexrow"
+                    data-slotted-inventory-section="{{@../key}}"
+                    data-slotted-inventory-slot="{{i}}"
+                >
                     <div style="height: 30px;"></div>
                 </li>
             {{/with}} {{/each}}
