--- a/src/templates/partials/actor-inventory.html
+++ b/src/templates/partials/actor-inventory.html
@@ -39,17 +39,17 @@
                         {{/if}}
                     </div>
 
-<!--                    {{#if ../../../owner}}-->
-<!--                        <div class="item-controls flexrow">-->
-<!--                            <a class="item-control item-toggle {{item.toggleClass}}"-->
-<!--                               title='{{item.toggleTitle}}'><i-->
-<!--                                    class="fas fa-shield-alt"></i></a>-->
-<!--                            <a class="item-control item-edit" title='{{localize "DND5E.ItemEdit"}}'><i-->
-<!--                                    class="fas fa-edit"></i></a>-->
-<!--                            <a class="item-control item-delete" title='{{localize "DND5E.ItemDelete"}}'><i-->
-<!--                                    class="fas fa-trash"></i></a>-->
-<!--                        </div>-->
-<!--                    {{/if}}-->
+                    {{#if ../../../owner}}
+                        <div class="item-controls flexrow">
+                            <a class="item-control item-toggle {{item.toggleClass}}"
+                               title='{{item.toggleTitle}}'><i
+                                    class="fas fa-shield-alt"></i></a>
+                            <a class="item-control item-edit" title='{{localize "DND5E.ItemEdit"}}'><i
+                                    class="fas fa-edit"></i></a>
+                            <a class="item-control item-delete" title='{{localize "DND5E.ItemDelete"}}'><i
+                                    class="fas fa-trash"></i></a>
+                        </div>
+                    {{/if}}
                 </li>
             {{/if}} {{else}}
                 <li class="item flexrow"
