--- a/src/templates/character-sheet.html
+++ b/src/templates/character-sheet.html
@@ -216,7 +216,7 @@
         </div>
 
         {{!-- Inventory Tab --}}
-        <div class="tab inventory flexcol" data-group="primary" data-tab="inventory">
+        <div class="tab inventory flexcol slotted-inventory" data-group="primary" data-tab="inventory">
             {{> "modules/fvtt-slotted-inventory/src/templates/partials/actor-inventory.html" sections=inventory}}
         </div>
 
