--- a/src/templates/partials/actor-inventory.html
+++ b/src/templates/partials/actor-inventory.html
@@ -13,8 +13,8 @@
     </ol>
 </div>
 
-<div class="item-list-wrapper">
-    <ol class="items-list inventory-list">
+<div class="item-list-wrapper inventory-list">
+    <ol class="items-list">
         {{#each sections as |section|}}
             <li>
                 <div class="items-header flexrow" data-slotted-inventory-section="{{@key}}">
