--- a/src/styles/slotted-inventory.css
+++ b/src/styles/slotted-inventory.css
@@ -8,6 +8,9 @@
 
 .inventory.slotted-inventory li.item > .slot-placeholder {
     height: 30px;
+    padding-left: 35px;
+    display: flex;
+    align-items: center;
 }
 
 .inventory.slotted-inventory li.item > .item-name > h4 {
@@ -17,6 +20,10 @@
 .inventory.slotted-inventory li.item > .item-controls > .item-create {
     margin-left: auto;
     max-width: 33%;
+}
+
+.inventory.slotted-inventory li.item > .item-controls > .slot-edit{
+    margin-left: 33%;
 }
 
 .inventory.slotted-inventory div.item-list-wrapper {
@@ -32,11 +39,28 @@
     break-inside: avoid;
 }
 
-span.slotted-inventory-section-toggle {
-    cursor: pointer;
+.slotted-inventory-section-toggle {
     width: 1em;
     height: 1em;
     padding-left: 0.2em;
     padding-right: 0.2em;
     flex: 0;
+}
+
+.section-controls {
+    flex: 0 0 68px;
+    justify-content: space-between;
+}
+
+.slotted-inventory-section-edit {
+    margin-left: 33%;
+}
+
+.slotted-inventory-footer {
+    flex: 0;
+    display: flex;
+    width: 100%;
+    padding: 0.25em 2em 0.25em 1em;
+    border-bottom: #b4b3ab 2px solid;
+    border-top: #b4b3ab 1px solid;
 }
